# PlayWrightPythonFramework

./: README.md  conftest.py  pyproject.toml  pytest.ini
Report/: report.html
allure-results/: 01c240e0-22c5-45a3-aaac-a46fa85ecb0e-container.json  02deb108-7880-4b63-be64-a46e6b040e95-container.json  05e8cbfc-142e-4196-9a65-bfddc1670fe2-container.json  0b5bca31-0374-4e9c-ad5f-7d81587d360c-container.json  1593c96f-3d63-404a-a210-62f55dbe70f1-container.json  16e99565-9bb4-46d0-94c4-d4a5010ebf1c-result.json  172f9ba7-c0ad-4884-8b8f-06dbfba3ad1e-result.json  187bf10b-bcf4-4e10-ba12-dc2fe1639081-result.json  19dc693f-b6ec-469b-8387-0026d49bdcaf-result.json  1ab419e8-2b3d-4ccf-b7e2-922b1e5db178-container.json  1e564fa5-256f-4c00-8376-fc7bcd25b84e-result.json  2178896d-c3e3-4dd4-8a2e-c34b166e437f-container.json  218d62ac-8aad-4cdb-82b7-36d005898299-result.json  25fb4137-2e7c-4c58-aa40-ebabaa14b73b-container.json  3548b9cb-1116-4c21-8756-7406745e423e-container.json  43646799-ebc2-4b03-ad03-9eaf8c14b180-result.json  4390ec83-f791-432c-b8ff-6ae398337c42-result.json  527eb0e8-29f7-40c1-b626-00d970d927b2-container.json  5296b01a-3ac2-439c-b9d5-9dfb5c5220f9-container.json  54dec924-ac33-4fcf-b542-f4467799097d-container.json  5c4381ee-146e-4275-903a-ee2d8c614062-container.json  60496fbf-10f7-461d-9c16-4512a941e346-container.json  61f8d89d-9dcb-4319-8efc-e4221d8be15a-result.json  649eb3f3-db2e-4556-bb45-0b131494c245-container.json  67157b13-4af9-46fb-8957-8e182fe39499-result.json  6a123e05-2097-4c6f-aa4e-65cabe22d09a-container.json  6ff3ed0a-43b5-475b-8033-1ea18fadbb77-container.json  (+29 more)
(+23 files in other folders)
