[project]
name = "playwrightpython"
version = "0.1.0"
description = ""
authors = [
    {name = "Soumya Samal",email = "83507063+Theeaglefreak@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.49.1,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "jsonpath-ng (>=1.7.0,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
